Avatar clipping CSS fix

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -166,5 +166,5 @@ nav ul li {
     float: right;
     width: 120px;
     position: relative;
-    top: -160px;
+    top: -150px;
 }
